--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -11,3 +11,5 @@ Error.signup.name.length=The name must have between 5 and 24 characters.
 Error.signup.lastName.length=The last name must have between 5 and 24 characters.
 Error.signup.password.length = The password must have between 5 and 24 characters.
 Error.signup.passwordConfirm.coincidence=These passwords don't match.
+Error.mark.add.score.value=The mark value must be between 0 and 10.
+Error.mark.edit.description.length=Description must be at least 20 characters long.
