SDI-2022-316-sesión4-Ejercicio-complementario2

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,3 +13,6 @@ Error.signup.password.length = The password must have between 5 and 24 character
 Error.signup.passwordConfirm.coincidence=These passwords don't match.
 Error.mark.add.score.value=The mark value must be between 0 and 10.
 Error.mark.edit.description.length=Description must be at least 20 characters long.
+
+Error.professor.dni.format=The DNI must have a length of 9 and end with a character.
+Error.professor.dni.duplicate=The DNI already exists in the system.
